--- a/portfoliobylan.html
+++ b/portfoliobylan.html
@@ -611,7 +611,7 @@
             <div class="mobile-text2"
             <span style="margin-left: -20px"><a href="mailto:llanlan91@gmail.com">llanlan91@gmail.com</a></span>
             <a href="https://www.linkedin.com/in/llan">linkedin.com/in/llan</a>
-            <a href="https://github.com/llanlan1">github.com/llanlan1</a>
+            <a href="https://github.com/llanlan1"><i>github.com/llanlan1</i></a>
             </div>
         </div>
             <p style="line-height: 6.99em">&nbsp</p> 
