--- a/portfoliobylan.html
+++ b/portfoliobylan.html
@@ -505,6 +505,8 @@
             
             <p><strong>CERTIFICATION</strong><br />
             Microsoft Azure AZ-900<br />
+            Google Cloud Skill Badge: Innovating with Google Cloud Artificial Intelligence (AI)<br />
+            Typography Fundamentals - Feel Confident with Type!<br />
             3DS MAX for Architectural Visualisation<br />
             
             <br></p>
