--- a/500.html
+++ b/500.html
@@ -18,14 +18,33 @@
             font-weight: 400;
             line-height: 1em;
         }
+
+        h2 {
+            font-size: 16px;
+            font-weight: 200;
+        }
+
         p {
             font-size: 17px;
             font-weight: 200;
         }
+
+        a {
+            color: #585858;
+        }
+
     </style>
 </head>
 <body>
-    <h1>Kindly Refresh<br /> The Page :)</h1>
-    <p>This should work (but if not, please try again later)</p>
+    <h2>Welcome!</h2><h1>Kindly Refresh<br /> The Page :)</h1>
+    <p>&nbsp;</p>
+    <p style="padding-bottom: 1.25px;">This should bring you to</p>
+    <p style="padding-bottom: 1.2px; font-size: 16px;">
+        <a href https://lanlan91.pythonanywhere.com>https://lanlan91.pythonanywhere.com</a>
+    <br>
+    <br>
+    </p>
+    <br>
+    <span style="font-size: 14px;"><i>If not, please try again later</i></span></p>
 </body>
 </html>
