--- a/500.html
+++ b/500.html
@@ -30,7 +30,8 @@
         }
 
         a {
-            color: #585858;
+            color: #616161;
+            letter-spacing: 0.005em;
         }
 
     </style>
@@ -40,7 +41,7 @@
     <p>&nbsp;</p>
     <p style="padding-bottom: 1.25px;">This should bring you to</p>
     <p style="padding-bottom: 1.2px; font-size: 16px;">
-        <a href https://lanlan91.pythonanywhere.com>https://lanlan91.pythonanywhere.com</a>
+        <a href="https://lanlan91.pythonanywhere.com">https://lanlan91.pythonanywhere.com</a>
     <br>
     <br>
     </p>
