Updated html and py files

--- a/500.html
+++ b/500.html
@@ -16,7 +16,7 @@
             color: #000000;
             font-size: 3.3em;
             font-weight: 400;
-            line-height: 1em;
+            line-height: 1.011em;
         }
 
         h2 {
@@ -25,7 +25,7 @@
         }
 
         p {
-            font-size: 17px;
+            font-size: 16.181px;
             font-weight: 200;
         }
 
@@ -37,11 +37,11 @@
     </style>
 </head>
 <body>
-    <h2>Welcome!</h2><h1>Kindly Refresh<br /> The Page :)</h1>
-    <p>&nbsp;</p>
+    <h2>Welcome!</h2><h1 style="padding-top: 21.533px">Kindly<br /> <span style="text-decoration: underline; text-underline-offset: 10px; text-decoration-thickness: 10px;">Refresh</span><br /> The Page<br /> to <span style="text-decoration: underline; text-underline-offset: 10px; text-decoration-thickness: 9.8px;"> Proceed</span>.</h1>
+    <p style="padding-bottom: 45.465px">&nbsp;</p>
     <p style="padding-bottom: 1.25px;">This should bring you to</p>
-    <p style="padding-bottom: 1.2px; font-size: 16px;">
-        <a href="https://lanlan91.pythonanywhere.com">https://lanlan91.pythonanywhere.com</a>
+    <p style="padding-bottom: 1.2px; font-size: 16px;"></p>
+    <p style="margin-left: 0.5px; font-size: 15.495px; letter-spacing: 0.005em;"><a href="https://lanlan91.pythonanywhere.com">lanlan91.pythonanywhere.com</a></p>
     <br>
     <br>
     </p>
