--- a/portfoliobylan.html
+++ b/portfoliobylan.html
@@ -180,8 +180,8 @@
         grid-template-columns: repeat(4, 1fr); /* 3 columns for desktop */
         gap: 10px; /* Space between videos */
         margin-left: 0px;
-        margin-top: 5px;
-        margin-right: -10px;
+        margin-top: 4.5px;
+        margin-right: 19px;
         margin-bottom: 5px;
     }
 
@@ -469,7 +469,7 @@
     </div>
 
         <p style="line-height: 0px;">&nbsp</p>                    
-        <hr class="solid" style="margin-left: 20px">
+        <hr class="solid" style="margin-left: 20px; margin-right: 19px;">
 
 </section>
 
@@ -499,7 +499,7 @@
                 &nbsp;<br />
                 <br>
                 </p>
-                <a href="https://github.com/llanlan1/e-commerce-marketplace-app-prototype" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.004em; font-size: 0.97em;">&nbsp;View on GitHub</span></a>
+                <a href="https://github.com/llanlan1/e-commerce-marketplace-app-prototype" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.0092em; font-size: 0.97em;">&nbsp;View on GitHub</span></a>
                 <p style="line-height: 1.16em">&nbsp;</p>
             </div>
             <div class="video-item">
@@ -522,7 +522,7 @@
                 &nbsp;<br />
                 <br>
                 </p>
-                <a href="https://github.com/llanlan1/flask-website-with-database" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.004em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
+                <a href="https://github.com/llanlan1/flask-website-with-database" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.0092em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
                 <p style="line-height: 1.16em">&nbsp;</p>
             </div>
             <div class="video-item">
@@ -545,7 +545,7 @@
                 &nbsp;<br />
                 <br>
                 </p>
-                <a href="https://github.com/llanlan1/mini-projects" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.004em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
+                <a href="https://github.com/llanlan1/mini-projects" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.0092em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
                 <p style="line-height: 1.16em">&nbsp;</p>
             </div>
             <div class="video-item">
@@ -568,7 +568,7 @@
                 &nbsp;Creator<br />
                 <br>
                 </p>
-                <a href="https://github.com/llanlan1/cloud-resume-challenge" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.004em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
+                <a href="https://github.com/llanlan1/cloud-resume-challenge" target="_blank" class="view-portfolio"><span style="letter-spacing: -0.0092em; font-size: 0.99em;">&nbsp;View on GitHub</span></a>
                 <p style="line-height: 1.16em">&nbsp;</p>
             </div>
         </div>
