--- a/portfoliobylan.html
+++ b/portfoliobylan.html
@@ -240,7 +240,7 @@
             height: 100%; /* Ensure full height */
             padding: 0; /* Remove any padding */
             margin-left: 20px;
-            margin-right: 19px;
+            margin-right: -9px;
         }
 
         .video-description {
@@ -721,9 +721,9 @@
         <div>
             <h3>CONTACT</h3>
             <div class="mobile-text2"
-            <span style="margin-left: -20px"><a href="mailto:llanlan91@gmail.com">llanlan91@gmail.com</a></span>
-            <a href="https://www.linkedin.com/in/llan">linkedin.com/in/llan</a>
-            <a href="https://github.com/llanlan1"><span style="letter-spacing: 0.005em; line-height: 1.3em; color:#202020"><i>github.com/llanlan1</i></span></a>
+            <span style="margin-left: -20px"><a href="mailto:llanlan91@gmail.com" target="_blank">llanlan91@gmail.com</a></span>
+            <a href="https://www.linkedin.com/in/llan" target="_blank">linkedin.com/in/llan</a>
+            <a href="https://github.com/llanlan1" target="_blank"><span style="letter-spacing: 0.005em; line-height: 1.3em; color:#202020"><i>github.com/llanlan1</i></span></a>
             </div>
         </div>
             <p style="line-height: 6.57em">&nbsp</p> 
