--- a/500.html
+++ b/500.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Error</title>
+    <title>Just one more step...</title>
     <style>
         body {
             font-family: Arial, sans-serif;
